--- a/sfg-pet-clinic/release.properties
+++ b/sfg-pet-clinic/release.properties
@@ -1,11 +1,21 @@
 #release configuration
-#Thu Jul 16 22:34:07 IST 2020
+#Thu Jul 16 22:40:27 IST 2020
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=true
-completedPhase=check-poms
+project.rel.com.example\:sfg-pet-clinic=0.0.1
+project.rel.com.example\:pet-clinic-data=0.0.1
+project.scm.com.example\:sfg-pet-clinic.empty=true
+project.rel.com.example\:pet-clinic-web=0.0.1
+project.scm.com.example\:pet-clinic-data.empty=true
+completedPhase=run-preparation-goals
 scm.url=scm\:git\:ssh\://git@github.com/spring-projects/spring-boot.git/sfg-pet-clinic
+project.dev.com.example\:pet-clinic-web=0.0.2-SNAPSHOT
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=true
+project.dev.com.example\:pet-clinic-data=0.0.2-SNAPSHOT
+project.dev.com.example\:sfg-pet-clinic=0.0.2-SNAPSHOT
+project.scm.com.example\:pet-clinic-web.empty=true
+scm.tag=sfg-pet-clinic-0.0.1
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
