--- a/sfg-pet-clinic/pom.xml
+++ b/sfg-pet-clinic/pom.xml
@@ -40,6 +40,7 @@
 	</modules>
 
   <scm>
+    <connection>scm:git:file://D:\Git\Project\sfg-pet-clinic\sfg-pet-clinic</connection>
     <developerConnection>scm:git:https://github.com/ShaniSh96/sfg-pet-clinic-mine.git</developerConnection>
   </scm>
 </project>
