--- a/sfg-pet-clinic/pom.xml
+++ b/sfg-pet-clinic/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>sfg-pet-clinic</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1 SNAPSHOT</version>
 	<name>sfg-pet-clinic</name>
 	<description>Pet Clinic</description>
 	<packaging>pom</packaging>
