--- a/sfg-pet-clinic/pet-clinic-data/pom.xml
+++ b/sfg-pet-clinic/pet-clinic-data/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <artifactId>sfg-pet-clinic</artifactId>
     <groupId>com.example</groupId>
-    <version>0.0.1</version>
+    <version>0.0.1 SNAPSHOT</version>
   </parent>
 
   <groupId>com.example</groupId>
   <artifactId>pet-clinic-data</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.1 SNAPSHPOT</version>
 
 
 
