--- a/sfg-pet-clinic/pom.xml
+++ b/sfg-pet-clinic/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>sfg-pet-clinic</artifactId>
-	<version>0.0.1 SNAPSHOT</version>
+	<version>0.0.2</version>
 	<name>sfg-pet-clinic</name>
 	<description>Pet Clinic</description>
 	<packaging>pom</packaging>
@@ -41,5 +41,6 @@
 
   <scm>
     <developerConnection>scm:git:https://github.com/ShaniSh96/sfg-pet-clinic-mine.git</developerConnection>
+    <tag>0.0.2</tag>
   </scm>
 </project>
