--- a/sfg-pet-clinic/pet-clinic-data/pom.xml
+++ b/sfg-pet-clinic/pet-clinic-data/pom.xml
@@ -7,11 +7,7 @@
     <version>0.0.4-SNAPSHOT</version>
   </parent>
 
-  <groupId>com.example</groupId>
-  <artifactId>pet-clinic-data</artifactId>
-  <version>0.0.4-SNAPSHOT</version>
-
-
+<artifactId>pet-clinic-data</artifactId>
 
   <name>pet-clinic-data</name>
   <!-- FIXME change it to the project's website -->
@@ -50,6 +46,33 @@
 		<artifactId>lombok</artifactId>
 		<optional>true</optional>
 	</dependency>
+	<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>2.22.0</version>
+            <scope>test</scope>
+        </dependency>
   </dependencies>
 
 		<build>
