mistakes - CrudRepository, Dataloader order closes #53

--- a/sfg-pet-clinic/pet-clinic-web/src/main/resources/application.properties
+++ b/sfg-pet-clinic/pet-clinic-web/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.banner.image.location=vizsla.jpg
 # Internationalization
 spring.messages.basename=messages/messages
-server.port = 8088
+server.port = 8090
+spring.profiles.active=springdatajpa
