--- a/sfg-pet-clinic/pet-clinic-web/pom.xml
+++ b/sfg-pet-clinic/pet-clinic-web/pom.xml
@@ -57,6 +57,13 @@
 			</exclusions>
 		</dependency>	
 		
+		<dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>2.22.0</version>
+            <scope>test</scope>
+        </dependency>
+		
 		<!-- webjars -->
     <dependency>
       <groupId>org.webjars</groupId>
